--- a/src/GUI/Covers/GUI_AlternativeCovers.ui
+++ b/src/GUI/Covers/GUI_AlternativeCovers.ui
@@ -63,7 +63,7 @@
       <enum>Qt::StrongFocus</enum>
      </property>
      <property name="text">
-      <string>Search</string>
+      <string notr="true"/>
      </property>
     </widget>
    </item>
@@ -210,19 +210,19 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_cancel">
+      <widget class="QPushButton" name="btn_close">
        <property name="focusPolicy">
         <enum>Qt::StrongFocus</enum>
        </property>
        <property name="text">
-        <string>Close</string>
+        <string notr="true">Close</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_apply">
        <property name="text">
-        <string>Apply</string>
+        <string notr="true">Apply</string>
        </property>
       </widget>
      </item>
@@ -269,7 +269,7 @@
       <enum>Qt::StrongFocus</enum>
      </property>
      <property name="text">
-      <string>...</string>
+      <string notr="true">...</string>
      </property>
     </widget>
    </item>
