--- a/src/GUI/Plugins/Broadcasting/GUI_Broadcast.ui
+++ b/src/GUI/Plugins/Broadcasting/GUI_Broadcast.ui
@@ -14,20 +14,11 @@
    <string/>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
    <property name="verticalSpacing">
     <number>5</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
    </property>
    <item row="0" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -66,7 +57,7 @@
      <item>
       <widget class="QPushButton" name="btn_retry">
        <property name="text">
-        <string>Retry</string>
+        <string notr="true">Retry</string>
        </property>
        <property name="icon">
         <iconset resource="../../Resources/Icons.qrc">
