--- a/src/GUI/Preferences/Broadcast/GUI_BroadcastSetup.ui
+++ b/src/GUI/Preferences/Broadcast/GUI_BroadcastSetup.ui
@@ -22,9 +22,9 @@
     </widget>
    </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="lab_activate">
      <property name="text">
-      <string>Activate</string>
+      <string notr="true">Activate</string>
      </property>
     </widget>
    </item>
@@ -85,7 +85,7 @@
    <item row="4" column="0">
     <widget class="QLabel" name="lab_url_title">
      <property name="text">
-      <string>Stream URL:</string>
+      <string notr="true">Stream URL:</string>
      </property>
     </widget>
    </item>
