--- a/src/GUI/Preferences/Covers/GUI_Covers.ui
+++ b/src/GUI/Preferences/Covers/GUI_Covers.ui
@@ -12,7 +12,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="2">
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="lab_active">
      <property name="font">
       <font>
        <weight>75</weight>
@@ -20,7 +20,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Active</string>
+      <string notr="true">Active</string>
      </property>
     </widget>
    </item>
@@ -38,7 +38,7 @@
     </widget>
    </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="lab_inactive">
      <property name="font">
       <font>
        <weight>75</weight>
@@ -46,7 +46,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Inactive</string>
+      <string notr="true">Inactive</string>
      </property>
     </widget>
    </item>
