--- a/src/GUI/Preferences/LastFM/GUI_LastFM.ui
+++ b/src/GUI/Preferences/LastFM/GUI_LastFM.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>457</width>
-    <height>177</height>
+    <height>185</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -15,9 +15,9 @@
     <number>10</number>
    </property>
    <item row="1" column="0">
-    <widget class="QLabel" name="label_4">
+    <widget class="QLabel" name="lab_activate">
      <property name="text">
-      <string>Activate</string>
+      <string notr="true">Activate</string>
      </property>
     </widget>
    </item>
@@ -66,9 +66,9 @@
     </widget>
    </item>
    <item row="4" column="2">
-    <widget class="QLabel" name="label_5">
+    <widget class="QLabel" name="lab_sec">
      <property name="text">
-      <string>sec</string>
+      <string notr="true">sec</string>
      </property>
     </widget>
    </item>
