Language update, Tree View, Date config update

--- a/src/GUI/Player/GUI_Player.ui
+++ b/src/GUI/Player/GUI_Player.ui
@@ -62,23 +62,14 @@
         <enum>QFrame::Raised</enum>
        </property>
        <layout class="QGridLayout" name="gridLayout">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
-         <number>0</number>
-        </property>
         <property name="horizontalSpacing">
          <number>5</number>
         </property>
         <property name="verticalSpacing">
          <number>2</number>
+        </property>
+        <property name="margin">
+         <number>0</number>
         </property>
         <item row="2" column="2">
          <widget class="QPushButton" name="btn_stop">
@@ -289,9 +280,6 @@
               <width>27</width>
               <height>27</height>
              </size>
-            </property>
-            <property name="shortcut">
-             <string>Ctrl+S</string>
             </property>
             <property name="checkable">
              <bool>true</bool>
@@ -508,7 +496,7 @@
                <enum>Qt::ClickFocus</enum>
               </property>
               <property name="text">
-               <string>Sayonara Player</string>
+               <string notr="true">Sayonara Player</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -875,16 +863,7 @@
              <number>0</number>
             </property>
             <layout class="QGridLayout" name="gridLayout_6">
-             <property name="leftMargin">
-              <number>0</number>
-             </property>
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <property name="rightMargin">
-              <number>0</number>
-             </property>
-             <property name="bottomMargin">
+             <property name="margin">
               <number>0</number>
              </property>
              <property name="spacing">
@@ -976,12 +955,12 @@
      <x>0</x>
      <y>0</y>
      <width>1038</width>
-     <height>19</height>
+     <height>20</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFle">
+   <widget class="QMenu" name="menu_file">
     <property name="title">
-     <string>File</string>
+     <string notr="true">File</string>
     </property>
     <addaction name="action_OpenFile"/>
     <addaction name="action_OpenFolder"/>
@@ -1011,7 +990,7 @@
     <addaction name="action_help"/>
     <addaction name="action_about"/>
    </widget>
-   <addaction name="menuFle"/>
+   <addaction name="menu_file"/>
    <addaction name="menuView"/>
    <addaction name="menuAbout"/>
   </widget>
@@ -1021,7 +1000,7 @@
      <normaloff>:/Icons/play.svg.png</normaloff>:/Icons/play.svg.png</iconset>
    </property>
    <property name="text">
-    <string>Open File</string>
+    <string notr="true">Open File</string>
    </property>
    <property name="shortcut">
     <string notr="true">Ctrl+O</string>
@@ -1033,7 +1012,7 @@
      <normaloff>:/Icons/sampler.svg.png</normaloff>:/Icons/sampler.svg.png</iconset>
    </property>
    <property name="text">
-    <string>Open Folder</string>
+    <string notr="true">Open Folder</string>
    </property>
    <property name="shortcut">
     <string notr="true">Ctrl+Shift+O</string>
@@ -1045,7 +1024,7 @@
      <normaloff>:/Icons/power_on.svg.png</normaloff>:/Icons/power_on.svg.png</iconset>
    </property>
    <property name="text">
-    <string>Close</string>
+    <string notr="true">Close</string>
    </property>
    <property name="shortcut">
     <string notr="true">Ctrl+Q</string>
@@ -1069,7 +1048,7 @@
   </action>
   <action name="action_about">
    <property name="text">
-    <string>About</string>
+    <string notr="true">About</string>
    </property>
   </action>
   <action name="action_viewLibrary">
@@ -1080,7 +1059,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Library</string>
+    <string notr="true">Library</string>
    </property>
    <property name="shortcut">
     <string notr="true">Ctrl+L</string>
@@ -1109,11 +1088,16 @@
   </action>
   <action name="action_logger">
    <property name="text">
-    <string>Logger</string>
+    <string notr="true">Logger</string>
    </property>
   </action>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>CoverButton</class>
+   <extends>QPushButton</extends>
+   <header>GUI/Covers/CoverButton.h</header>
+  </customwidget>
   <customwidget>
    <class>SearchSlider</class>
    <extends>QSlider</extends>
@@ -1130,11 +1114,6 @@
    <extends>QWidget</extends>
    <header>GUI/Plugins/Generic/GUI_PlayerPlugin.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>CoverButton</class>
-   <extends>QPushButton</extends>
-   <header>GUI/Covers/CoverButton.h</header>
   </customwidget>
   <customwidget>
    <class>SayonaraLoadingBar</class>
