--- a/src/GUI/Preferences/StreamRecorder/GUI_StreamRecorder.ui
+++ b/src/GUI/Preferences/StreamRecorder/GUI_StreamRecorder.ui
@@ -85,7 +85,7 @@
       <enum>Qt::LeftToRight</enum>
      </property>
      <property name="text">
-      <string>...</string>
+      <string notr="true">...</string>
      </property>
     </widget>
    </item>
