--- a/src/GUI/Player/GUI_Logger.ui
+++ b/src/GUI/Player/GUI_Logger.ui
@@ -10,9 +10,6 @@
     <height>521</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Logger</string>
-  </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QPlainTextEdit" name="te_log"/>
@@ -22,7 +19,7 @@
      <item>
       <widget class="QPushButton" name="btn_save">
        <property name="text">
-        <string>Save</string>
+        <string notr="true">Save</string>
        </property>
       </widget>
      </item>
@@ -42,7 +39,7 @@
      <item>
       <widget class="QPushButton" name="btn_close">
        <property name="text">
-        <string>Close</string>
+        <string notr="true">Close</string>
        </property>
       </widget>
      </item>
