--- a/src/GUI/Plugins/Engine/Speed/GUI_Speed.ui
+++ b/src/GUI/Plugins/Engine/Speed/GUI_Speed.ui
@@ -38,7 +38,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -54,7 +54,7 @@
        <item row="1" column="1">
         <widget class="QLabel" name="lab_speed">
          <property name="text">
-          <string>1.0</string>
+          <string notr="true">1.0</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -64,7 +64,7 @@
        <item row="1" column="2">
         <widget class="QPushButton" name="btn_revert_speed">
          <property name="text">
-          <string>Default</string>
+          <string notr="true">Default</string>
          </property>
         </widget>
        </item>
@@ -148,7 +148,7 @@
        <item row="0" column="2">
         <widget class="QPushButton" name="btn_revert_pitch">
          <property name="text">
-          <string>Default</string>
+          <string notr="true">Default</string>
          </property>
         </widget>
        </item>
@@ -159,7 +159,7 @@
    <item row="0" column="0">
     <widget class="QCheckBox" name="cb_active">
      <property name="text">
-      <string>Active</string>
+      <string notr="true">Active</string>
      </property>
     </widget>
    </item>
