language update, Ready for release

--- a/src/GUI/Plugins/Engine/AudioConverter/GUI_AudioConverter.ui
+++ b/src/GUI/Plugins/Engine/AudioConverter/GUI_AudioConverter.ui
@@ -29,7 +29,7 @@
       <enum>Qt::StrongFocus</enum>
      </property>
      <property name="text">
-      <string>Activate</string>
+      <string notr="true">Activate</string>
      </property>
     </widget>
    </item>
