--- a/src/GUI/Plugins/Broadcasting/GUI_Broadcast.ui
+++ b/src/GUI/Plugins/Broadcasting/GUI_Broadcast.ui
@@ -14,11 +14,20 @@
    <string/>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <property name="verticalSpacing">
     <number>5</number>
-   </property>
-   <property name="margin">
-    <number>0</number>
    </property>
    <item row="0" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -37,7 +46,7 @@
         <number>0</number>
        </property>
        <property name="text">
-        <string>3 users listening</string>
+        <string notr="true">3 users listening</string>
        </property>
       </widget>
      </item>
