--- a/src/GUI/Plugins/Engine/Equalizer/GUI_Equalizer.ui
+++ b/src/GUI/Plugins/Engine/Equalizer/GUI_Equalizer.ui
@@ -753,7 +753,7 @@
      <item>
       <widget class="MenuToolButton" name="btn_tool">
        <property name="text">
-        <string>Menu</string>
+        <string notr="true">Menu</string>
        </property>
       </widget>
      </item>
