--- a/src/GUI/TagEdit/GUI_TagEdit.ui
+++ b/src/GUI/TagEdit/GUI_TagEdit.ui
@@ -274,7 +274,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="lab_track_num">
+      <widget class="QLabel" name="lab_track_index">
        <property name="text">
         <string/>
        </property>
@@ -495,7 +495,7 @@
         <number>5</number>
        </property>
        <item row="0" column="1">
-        <widget class="QLabel" name="label_13">
+        <widget class="QLabel" name="lab_track_num">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
