--- a/src/GUI/Preferences/Covers/GUI_Covers.ui
+++ b/src/GUI/Preferences/Covers/GUI_Covers.ui
@@ -35,6 +35,9 @@
      <property name="defaultDropAction">
       <enum>Qt::MoveAction</enum>
      </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item row="0" column="0">
@@ -60,6 +63,9 @@
      </property>
      <property name="defaultDropAction">
       <enum>Qt::MoveAction</enum>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
