--- a/src/GUI/Preferences/LibraryPreferences/GUI_LibraryPreferences.ui
+++ b/src/GUI/Preferences/LibraryPreferences/GUI_LibraryPreferences.ui
@@ -27,6 +27,13 @@
        <item row="0" column="1">
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
+          <widget class="QPushButton" name="btn_up">
+           <property name="text">
+            <string>Up</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="verticalSpacer_3">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -73,6 +80,13 @@
            </property>
           </spacer>
          </item>
+         <item>
+          <widget class="QPushButton" name="btn_down">
+           <property name="text">
+            <string>Down</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item row="4" column="0" colspan="2">
@@ -116,7 +130,11 @@
         </widget>
        </item>
        <item row="0" column="0">
-        <widget class="QListView" name="lv_libs"/>
+        <widget class="QListView" name="lv_libs">
+         <property name="alternatingRowColors">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
