lyrics in id3 and xiph tags

--- a/src/GUI/InfoDialog/GUI_Lyrics.ui
+++ b/src/GUI/InfoDialog/GUI_Lyrics.ui
@@ -6,12 +6,88 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>521</height>
+    <width>646</width>
+    <height>468</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" rowspan="2" colspan="2">
+   <property name="verticalSpacing">
+    <number>10</number>
+   </property>
+   <item row="1" column="0" colspan="2">
+    <widget class="QTextEdit" name="te_lyrics"/>
+   </item>
+   <item row="5" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>8</number>
+     </property>
+     <item>
+      <widget class="QPushButton" name="btn_save_lyrics">
+       <property name="text">
+        <string>Save Lyrics</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_close">
+       <property name="minimumSize">
+        <size>
+         <width>80</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string notr="true">Close</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_search">
+       <property name="minimumSize">
+        <size>
+         <width>80</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string notr="true">Search</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="lab_header">
+     <property name="text">
+      <string notr="true"/>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::RichText</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="2">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" rowspan="2" colspan="2">
     <layout class="QGridLayout" name="gridLayout_11">
      <property name="horizontalSpacing">
       <number>10</number>
@@ -20,12 +96,12 @@
       <number>6</number>
      </property>
      <item row="0" column="6">
-      <widget class="QLabel" name="lab_server">
+      <widget class="QLabel" name="lab_source">
        <property name="toolTip">
         <string notr="true"/>
        </property>
        <property name="text">
-        <string>Server</string>
+        <string notr="true">Source</string>
        </property>
       </widget>
      </item>
@@ -38,7 +114,7 @@
         <string notr="true"/>
        </property>
        <property name="text">
-        <string>Artist</string>
+        <string notr="true">Artist</string>
        </property>
       </widget>
      </item>
@@ -48,7 +124,7 @@
         <string notr="true"/>
        </property>
        <property name="text">
-        <string>Title</string>
+        <string notr="true">Title</string>
        </property>
       </widget>
      </item>
@@ -121,69 +197,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0" colspan="2">
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_close">
-       <property name="minimumSize">
-        <size>
-         <width>80</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Close</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_search">
-       <property name="minimumSize">
-        <size>
-         <width>80</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Search</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="0" column="0" colspan="2">
-    <widget class="QTextEdit" name="te_lyrics"/>
-   </item>
-   <item row="4" column="0">
-    <widget class="QProgressBar" name="pb_progress">
-     <property name="maximum">
-      <number>0</number>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
