--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -17,10 +17,6 @@ QWidget:focus
 }
 
 
-QMainWindow
-{
-}
-
 QMainWindow, QDialog
 {
 	border: none;
@@ -43,7 +39,8 @@ QGroupBox::title
 }
 
 
-QFrame
+QFrame,
+QMenu::separator
 {
 	border-bottom: 1px groove qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop:0 transparent, stop: 0.3 #242424, stop: 0.7 #242424, stop: 1.0 transparent);
 	background: transparent;
@@ -509,7 +506,8 @@ QComboBox QAbstractItemView:focus
 }
 
 QComboBox:editable,
-QLineEdit 
+QLineEdit,
+QSpinBox
 {
 	padding: 3px;
 	height: 24px;
@@ -521,17 +519,76 @@ QLineEdit
 
 
 
-QLineEdit::focus
+QLineEdit::focus,
+QSpinBox::focus
 {
 	border: 1px solid #e8841a;
 }
 
+QTextEdit
+{
+	background: #282828;
+}
 
-QLineEdit:disabled
+QLineEdit:disabled,
+QSpinBox:disabled,
+QTextEdit:disabled
 {
 	background: #383838;
 	color: #525252;
 }
+
+QSpinBox:focus
+{
+	padding-right: 15px;
+}
+
+QSpinBox::up-button
+{
+	subcontrol-origin: margin;
+	subcontrol-position: top right;
+	width: 12px;
+	margin-top: 1px;
+	margin-right: 1px;
+	padding: 2px;
+	background: #383838;
+}
+
+QSpinBox::up-button:hover
+{
+	background: #525252;
+}
+
+QSpinBox::up-arrow
+{
+	image: url(:/Icons/arrow_up.svg.png);
+	width: 7px;
+	height: 7px;
+}
+
+QSpinBox::down-button
+{
+	subcontrol-origin: border;
+	subcontrol-position: bottom right;
+	padding: 2px;
+	margin-bottom: 1px;
+	margin-right: 1px;
+	width: 12px;
+	background: #383838;
+}
+
+QSpinBox::down-button:hover
+{
+	background: #525252;
+}
+
+QSpinBox::down-arrow
+{
+	image: url(:/Icons/arrow_down.svg.png);
+	width: 7px;
+	height: 7px;
+}
+
 
 QTabWidget::pane
 {
@@ -567,7 +624,6 @@ QTabBar::tab
 
 PlaylistTabBar::tab:last
 {
-
 	min-width: 1.5ex;
 	max-width: 1.5ex;
 	margin-top: 2px;
@@ -656,72 +712,6 @@ QTabBar::tear
 	width: 0px;
 }
 
-
-QSpinBox
-{
-	height: 24px;
-	background: #525252;
-	border: 1px solid #2B2B2B;
-}
-
-QSpinBox:focus
-{
-	padding-right: 15px;
-	background: #525252;
-	border: 1px solid #e8841a;
-}
-
-QSpinBox::up-button
-{
-	subcontrol-origin: margin;
-	subcontrol-position: top right;
-	width: 12px;
-	margin-top: 1px;
-	margin-right: 1px;
-	padding: 2px;
-	background: #383838;
-}
-
-QSpinBox::up-button:hover
-{
-	background: #525252;
-}
-
-QSpinBox::up-arrow
-{
-	image: url(:/Icons/arrow_up.svg.png);
-	width: 7px;
-	height: 7px;
-}
-
-QSpinBox::down-button
-{
-	subcontrol-origin: border;
-	subcontrol-position: bottom right;
-	padding: 2px;
-	margin-bottom: 1px;
-	margin-right: 1px;
-	width: 12px;
-	background: #383838;
-}
-
-QSpinBox::down-button:hover
-{
-	background: #525252;
-}
-
-QSpinBox::down-arrow
-{
-	image: url(:/Icons/arrow_down.svg.png);
-	width: 7px;
-	height: 7px;
-}
-
-QSpinBox:disabled
-{
-	background: #4F4F4F;
-	color: #7A7A7A;
-}
 
 
 QSlider:hover,
